# riscv-hpc-utils

./: .gitignore  CMakeLists.txt  Makefile  Makefile.include  README.md  pushToBoard.sh
counter_wraper/: Makefile
counter_wraper/src/: CSR_codes.h  CSR_snapshot.c  CSR_snapshot.h  main.c  utils.c  utils.h
csr_manipulation_test/: Makefile
csr_manipulation_test/src/: csr_manipulation_test.c
hpc_utils/: Makefile
hpc_utils/src/: help.c  help.h  hpc_utils.c
hpc_utils/tests/: Makefile
hpc_utils/tests/src/: add_and_div.c
hpc_utils_lib/: Makefile
hpc_utils_lib/include/: hpc_utils.h
hpc_utils_lib/src/: event_definition.h  fu540.h  hpc_utils_lib.c
hpc_utils_lib/tests/: Makefile
hpc_utils_lib/tests/src/: csr_manipulation_test.c
module_wraper/: Makefile
module_wraper/src/: load_module.c
performance_counters_util/: Makefile
performance_counters_util/include/: hpc_utils.h
performance_counters_util/src/: event_definition.h  fu540.h  hpc_utils.c  load_module.c  testing.c
utils/: CSR_codes.h  asm.h
